tests/ui/codegen/mir/validation/validate_entry_predecessor.mir
//@compile-flags: --pass dce

@module ValidateEntryPredecessor

//~? ERROR: [fn0] [bb0] entry block must have no predecessors
fn @loop() {
  bb0:
    jump bb0
}
